--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.5.0",
+    "elliptic": "^6.6.1",
     "express": "^4.18.2",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
